--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
+# Build directory
+build/
+build_*/
+
+# ESP32 specific
+sdkconfig
+sdkconfig.old
+
+# VSCode settings
+.vscode/
+
+# Config files with sensitive data
 config.js
 .env
+
+# Dependencies
+managed_components/
+dependencies.lock
+
+# Backup files
+*.bak
+*.gho
+*.ori
+*.orig
+*.tmp
+
+# Debug files
+*.log
+
+# Cache files
+.cache/
+
+# System Files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
